# passhash

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  passhash
src/: main.c
src/hashing/: argon2.c  argon2.h  evp.c  evp.h
src/ui/: getpass.c  getpass.h  window.c
src/ui/gtk/: window.c  window.h
