cmake_minimum_required(VERSION 2.6)

project(passhash)
file(GLOB_RECURSE SOURCES src/*.h src/*.c)
add_executable(${PROJECT_NAME} ${SOURCES})
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")

find_package(GTK3)
if(GTK3_FOUND)
    include_directories(${GTK3_INCLUDE_DIRS})
    link_directories(${GTK3_LIBRARY_DIRS})
    add_definitions(${GTK3_CFLAGS_OTHER})
    target_Link_libraries(${PROJECT_NAME} ${GTK3_LIBRARIES})
    add_definitions(-DGTK3_FOUND)
else()
	set_source_files_properties(src/ui/gtk/window.c PROPERTIES HEADER_FILE_ONLY TRUE)
endif(GTK3_FOUND)

find_package(OpenSSL REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${OPENSSL_LIBRARIES})

if(WIN32)
    set(sodium_USE_STATIC_LIBS ON CACHE BOOL "enable to statically link against sodium")
	add_definitions(-DSODIUM_STATIC)
endif(WIN32)
find_package(sodium REQUIRED)
include_directories(${sodium_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${sodium_LIBRARY_RELEASE})
